Bug 19042 - unsupported reloc 311/312
Summary: unsupported reloc 311/312
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gold (show other bugs)
Version: 2.26
: P2 normal
Target Milestone: ---
Assignee: Han Shen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-01 13:00 UTC by Andreas Schwab
Modified: 2016-01-16 01:03 UTC (History)
1 user (show)

See Also:
Host:
Target: aarch64-*-*
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwab 2015-10-01 13:00:27 UTC
$ make check-gold
[...]
`echo gcc -DHAVE_CONFIG_H -I. -I../../../binutils/gold/testsuite -I..  -I../../../binutils/gold/testsuite -I../../../binutils/gold/testsuite/.. -I../../../binutils/gold/testsuite/../../include -I../../../binutils/gold/testsuite/../../elfcpp -I.. -DLOCALEDIR="\"/usr/share/locale\""   -W -Wall -Wstrict-prototypes -Wmissing-prototypes -Wshadow -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -fmerge-constants -O2 -g | sed -e 's/-Wp,-D_FORTIFY_SOURCE=[0-9[0-9]]*//'` -c -fPIC -o ifuncmain7pic.o ../../../binutils/gold/testsuite/ifuncmain7.c
`echo gcc -W -Wall -Wstrict-prototypes -Wmissing-prototypes -Wshadow -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -fmerge-constants -O2 -g -fno-use-linker-plugin   -o ifuncmain7picstatic | sed -e 's/-Wp,-D_FORTIFY_SOURCE=[0-9][0-9]*//'` -Bgcctestdir/ -static ifuncmain7pic.o
gcctestdir/ld: error: ifuncmain7pic.o: unsupported reloc 311 against local symbol
gcctestdir/ld: error: ifuncmain7pic.o: unsupported reloc 312 against local symbol
gcctestdir/ld: error: ifuncmain7pic.o: unsupported reloc 311 against local symbol
gcctestdir/ld: error: ifuncmain7pic.o: unsupported reloc 312 against local symbol
gcctestdir/ld: internal error in relocate, at ../../binutils/gold/aarch64.cc:5669
collect2: error: ld returned 1 exit status
Makefile:5571: recipe for target 'ifuncmain7picstatic' failed
make[4]: *** [ifuncmain7picstatic] Error 1
Comment 1 Sourceware Commits 2015-10-27 22:32:09 UTC
The master branch has been updated by Han Shen <shenhan@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=4d2f5d5824be99326c2c3e459c298e338856d8c8

commit 4d2f5d5824be99326c2c3e459c298e338856d8c8
Author: Han Shen <shenhan@google.com>
Date:   Tue Oct 27 15:17:54 2015 -0700

    Patch for PR gold/19042 - unsupported reloc 311/312.
    
    gold/
    
    	* aarch64.cc (Target_aarch64::Scan::local): Add support for
    	reloc 311/312.
Comment 2 Han Shen 2016-01-16 01:03:37 UTC
Fixed in commit 4d2f5d582.