Patch for PR gold/19042 - unsupported reloc 311/312.

gold/

	* aarch64.cc (Target_aarch64::Scan::local): Add support for
	reloc 311/312.